Fix item cards not aligning in centre

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -16,6 +16,10 @@
 	padding: 10px;
 }
 
+.image-container {
+    position: relative;
+}
+
 /*#copyright {
 	background-color: rgba(0, 0, 0, 0.2);
 }*/
@@ -25,8 +29,6 @@
   	width: 100px;
 	height:auto;
 }
-
-
 
 
 
